--- a/travel-app/package.json
+++ b/travel-app/package.json
@@ -13,13 +13,15 @@
     "@reduxjs/toolkit": "^1.9.3",
     "axios": "^1.3.5",
     "g": "^2.0.1",
+    "immer": "^9.0.21",
     "json-server": "^0.17.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.10.0",
-    "redux": "^4.2.1"
+    "redux": "^4.2.1",
+    "redux-saga": "^1.2.3"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
